Fixed incorrect stress alignment in the right column

--- a/cortex/sheet.css
+++ b/cortex/sheet.css
@@ -1557,7 +1557,7 @@ ref
 	width: 40mm;
 	height: 20mm;
 	color: white;
-	left: 62mm;
+	margin-left: 38.5mm;
 	margin-top: -0.5mm;
 //	top: -2mm;
 //	background: yellow;
